--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,6 +94,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [build-ubuntu, build-windows]
+    if: github.ref_name == 'master'
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -112,7 +113,6 @@ jobs:
       - run: mv windows-build/liero-windows-x64-${{ github.sha }}.zip .
       - name: Release
         uses: softprops/action-gh-release@v2
-        if: ${{ github.ref_name == 'master' }}
         with:
           tag_name: ${{ github.ref_name }}-${{ github.sha }}
           files: |
