Add (and load) liero.cfg from "Setups" folder instead
This seems a bit cleaner than loading it from the root.

NOTE: ideally, at some point in the future, there should be a separate
step for loading *which* match setup is used. Right now we always load
liero.cfg on startup, unfortunately.

--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,8 @@ cmake_install.cmake
 # created by running Liero
 /Replays/
 /Profiles/
+/Setups/
 /TC/
-/liero.cfg
-/orbmit.cfg
-/original.cfg
 
 # copied manually for building/running project
 /_build/*icon*.png
