Add Setups folder to build artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 name: Build
-on: 
+on:
     pull_request:
     push:
       branches:
@@ -71,6 +71,7 @@ jobs:
           path: |
             openliero
             tctool
+            Setups
             TC
   build-windows:
     runs-on: windows-latest
@@ -97,6 +98,7 @@ jobs:
           path: |
             openliero.exe
             tctool.exe
+            Setups
             TC
   release:
     runs-on: ubuntu-latest
