style: easier parsing of link libraries
I find it easier to parse if they're all on their own line (and it looks
nicer in a git diff too!), rather than all on one line.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,11 @@ endif()
 
 # game
 add_library(game ${GAME_SOURCES})
-target_link_libraries(game SDL2::SDL2 SDL2_image::SDL2_image miniz)
+target_link_libraries(game
+  SDL2::SDL2
+  SDL2_image::SDL2_image
+  miniz
+)
 if(APPLE)
   add_executable(openliero MACOSX_BUNDLE src/game/main.cpp)
 elseif(WIN32)
@@ -115,7 +119,7 @@ elseif(WIN32)
 else()
   add_executable(openliero src/game/main.cpp)
 endif()
-target_link_libraries(openliero game)
+target_link_libraries(openliero PRIVATE game)
 
 if(OPENLIERO_BUILD_TCTOOL)
   set(TC_TOOL_SOURCES ${SOURCES}
@@ -125,9 +129,12 @@ if(OPENLIERO_BUILD_TCTOOL)
   )
 
   add_library(tc ${TC_TOOL_SOURCES})
-  target_link_libraries(tc SDL2::SDL2 miniz)
+  target_link_libraries(tc
+    SDL2::SDL2
+    miniz
+  )
   add_executable(tctool ${TC_TOOL_SOURCES})
-  target_link_libraries(tctool tc)
+  target_link_libraries(tctool PRIVATE tc)
 endif()
 
 if(OPENLIERO_BUILD_VIDEOTOOL)
@@ -138,7 +145,18 @@ if(OPENLIERO_BUILD_VIDEOTOOL)
     src/video_tool/video_recorder.c
   )
   add_library(vt ${VIDEO_TOOL_SOURCES})
-  target_link_libraries(vt SDL2::SDL2 avcodec avformat avutil dl pthread swresample swscale x264 miniz)
+  target_link_libraries(vt
+    SDL2::SDL2
+    miniz
+    avcodec
+    avformat
+    avutil
+    dl
+    pthread
+    swresample
+    swscale
+    x264
+  )
   target_include_directories(vt ffmpeg)
   target_link_directories(vt
     ffmpeg/libavcodec
@@ -149,7 +167,7 @@ if(OPENLIERO_BUILD_VIDEOTOOL)
     x264
   )
   add_executable(videotool ${VIDEO_TOOL_SOURCES})
-  target_link_libraries(videotool vt)
+  target_link_libraries(videotool PRIVATE vt)
 endif()
 
 if(APPLE)
