build: tweak icon placement
The _win icons are unused.

icon.png and spectator_icon.png are read from the project root so place
them there for now.

These are now also included in the auto-generated builds.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,9 @@ jobs:
         with:
           name: ubuntu-build
           path: |
+            icon.png
             openliero
+            spectator_icon.png
             tctool
             Setups
             Profiles
@@ -118,7 +120,9 @@ jobs:
         with:
           name: windows-build
           path: |
+            icon.png
             openliero.exe
+            spectator_icon.png
             tctool.exe
             Setups
             Profiles
