--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
           -G "Unix Makefiles"
           -DOPENLIERO_BUILD_TCTOOL=ON
       - name: Build
-        run: make
+        run: cmake --build . --config Release
       - name: Upload build
         uses: actions/upload-artifact@v4
         with:
