--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
             os: windows-latest
           - name: macos
             os: macos-latest
-            extra-flags: -D CMAKE_OSX_ARCHITECTURES="x86_64;arm64" -D CMAKE_OSX_DEPLOYMENT_TARGET="10.13"
+            extra-flags: -D CMAKE_OSX_ARCHITECTURES="x86_64;arm64"
 
     steps:
       - name: Checkout repository
