refactor: create dedicated directory for packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,17 +132,17 @@ if(APPLE)
 #    set(${VAR} ${_LIST} PARENT_SCOPE)
 #  endfunction()
 #
-#  resource(PROFILES "${CMAKE_CURRENT_SOURCE_DIR}/Profiles" Resources/Profiles *.lpf)
-#  resource(RESOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Resources" Resources/Resources *.png)
-#  resource(SETUPS "${CMAKE_CURRENT_SOURCE_DIR}/Setups" Resources/Setups *.cfg)
-#  resource(TC "${CMAKE_CURRENT_SOURCE_DIR}/TC" Resources/TC *)
-#  resource(ICON "${CMAKE_CURRENT_SOURCE_DIR}/pkg" Resources liero.icns)
+#  resource(PROFILES "${CMAKE_CURRENT_SOURCE_DIR}/data/Profiles" Resources/Profiles *.lpf)
+#  resource(RESOURCES "${CMAKE_CURRENT_SOURCE_DIR}/data/Resources" Resources/Resources *.png)
+#  resource(SETUPS "${CMAKE_CURRENT_SOURCE_DIR}/data/Setups" Resources/Setups *.cfg)
+#  resource(TC "${CMAKE_CURRENT_SOURCE_DIR}/data/TC" Resources/TC *)
+#  resource(ICON "${CMAKE_CURRENT_SOURCE_DIR}/packaging/icons" Resources openliero.icns)
 #
 #  set(RESOURCE_FILES ${PROFILES} ${RESOURCES} ${SETUPS} ${TC} ${ICON})
 #
 #  add_executable(openliero MACOSX_BUNDLE src/game/main.cpp "${RESOURCE_FILES}")
 elseif(WIN32)
-  add_executable(openliero WIN32 src/game/main.cpp pkg/win32_icon.rc)
+  add_executable(openliero WIN32 src/game/main.cpp packaging/icons/openliero.rc)
 else()
   add_executable(openliero src/game/main.cpp)
 endif()
